spartha1    Date: Tue Mar 13 16:30:35 EDT 2007  CSN: CSN-asimcore-16
                  Tue Mar 13 20:30:35 UTC 2007


Directory libperl/Asim/lib/Asim
 Repository.pm             Locally Modified           15 

Updating with simcore changes (rev. 2231)

- You can now check out a specific version from a BitKeeper repository
using the same syntax as for SVN and CVS, i.e.
"checkout package <packagename>/<tag_or_version_number>"

----------
spartha1    Date: Tue Mar 13 16:33:19 EDT 2007  CSN: CSN-asimcore-17
                  Tue Mar 13 20:33:19 UTC 2007


Directory libperl/Asim/lib/Asim/Package
 BitKeeper.pm              Locally Modified           16 

Updating with simcore changes (rev. 2232)

User now gets an error message with instructions on what to do
if he tries to update a BK package with changes that have not been
checked in locally.

----------
spartha1    Date: Tue Mar 13 16:37:16 EDT 2007  CSN: CSN-asimcore-18
                  Tue Mar 13 20:37:16 UTC 2007


Directory libperl/Asim/lib/Asim
 GenCFG.pm                 Locally Modified           17 

Directory tools/awb/awb2
 awb_util.pm               Locally Modified           17 

Updating with simcore changes (rev. 2233)

Improve performance of awb on CFX files:
- Add --listflags option fo all CFX files. This lets awb find out whether
a generated CFG file has multiple regions in a single pass instead of
having to invoke the CFX file twice.
- Cache the result of CFX queries for 1 minute in awb. The awb GUI
is constantly probing the CFX file, even with mouse events. The cache
greatly improves performance.

----------
spartha1    Date: Tue Mar 13 16:40:33 EDT 2007  CSN: CSN-asimcore-19
                  Tue Mar 13 20:40:33 UTC 2007


Directory tools/scripts
 asim-run                  Locally Modified           18 

Directory etc
 asimrc.template           Locally Modified           18 

Updating with simcore changes (rev. 2234)

- support for using seperate pool, class, queue netbatch params for build and run.